# bbot_workspace

./: README.md
bbot_hardware/: CMakeLists.txt  bbot_hardware.xml  package.xml
bbot_hardware/include/bbot_hardware/: arduino_comms.hpp  bbot_hardware.hpp  visibility_control.h  wheel.hpp
bbot_hardware/launch/: bbot_hardware.launch.py
bbot_hardware/scripts/: odom.py
bbot_hardware/src/: bbot_hardware.cpp
bbot_new_description/: package.xml  setup.cfg  setup.py
bbot_new_description/bbot_new_description/: PoseEstimator.py
bbot_new_description/config/: bbot_controllers.yaml  bbot_rviz.rviz
bbot_new_description/launch/: display.launch.py  gazebo.launch.py
bbot_new_description/meshes/: base_link.stl  camera_1.stl  leftwheel_1.stl  lidar_1.stl  rightwheel_1.stl
bbot_new_description/urdf/: bbot_diff_drive_plugin.xacro  bbot_new.gazebo  bbot_new.xacro  bbot_new_camera.xacro  bbot_new_lidar.xacro  materials.xacro  ros2_control.xacro
mini_car/: mini_car.ino
